fixing the overflow

--- a/main.scss
+++ b/main.scss
@@ -61,6 +61,7 @@ $hover_button_yellow: 0px 8px 0px 0px var(--Accent-2, #f4f4f4),
 body {
 	background-color: $Background;
 	background-image: url(./img_src/bg\ pattern.png);
+  overflow-x: hidden;
 }
 
 .header {
@@ -681,7 +682,7 @@ body {
 		grid-template-columns: 1fr 1fr;
 		justify-content: center;
 		align-items: center;
-
+    overflow-x: hidden;
 		padding-inline: 18vw;
 
 		h3,
@@ -805,7 +806,7 @@ body {
 }
 
 .CTA {
-  margin-top: 400px;
+	margin-top: 400px;
 
 	display: grid;
 	grid-template-columns: 1fr;
